--- a/NOVA/Views/Sevkiyat/DepoTransferPartials/DepoTransfer_Partial.cshtml
+++ b/NOVA/Views/Sevkiyat/DepoTransferPartials/DepoTransfer_Partial.cshtml
@@ -325,12 +325,15 @@
         }
     }
 
+    var StokAdlari = [];
+
     function StokAdlariGetir() {
         $.ajax({
             url: "http://192.168.2.13:83/api/stok/rehber/",
             type: 'GET',
             success: function (result) {
                 if (result.length > 0) {
+                    StokAdlari = result;
                     StokAdlariOtomatikTamamlama(result);
                 }
             }
@@ -953,7 +956,9 @@
 
                 $('#BarkodButton').prop("disabled", false);
 
-                return false;
+                $('#STOK_ADLARI').focus();
+
+                return true;
             }
 
             currentFocus = -1;
@@ -1239,6 +1244,7 @@
                             if (GirisDepo != -1 && CikisDepo != -1) {
                                 if (KayitTipi == 0) {
                                     $('#STOK_ADLARI').prop("disabled", false);
+                                    $('#BarkodButton').prop("disabled", false);
                                 }
                             }
 
@@ -1309,6 +1315,7 @@
                         if (KayitTipi == 0)
                         {
                             $('#STOK_ADLARI').prop("disabled", false);
+                            $('#BarkodButton').prop("disabled", false);
                         }
                     }
                 }
@@ -1323,6 +1330,7 @@
                         if (GirisDepo != -1 && CikisDepo != -1) {
                             if (KayitTipi == 0) {
                                 $('#STOK_ADLARI').prop("disabled", false);
+                                $('#BarkodButton').prop("disabled", false);
                             }
                         }
 
@@ -1363,6 +1371,7 @@
                     if (GirisDepo != -1 && CikisDepo != -1) {
                         if (KayitTipi == 0) {
                             $('#STOK_ADLARI').prop("disabled", false);
+                            $('#BarkodButton').prop("disabled", false);
                         }
                     }
                 }
@@ -1377,6 +1386,7 @@
                         if (GirisDepo != -1 && CikisDepo != -1) {
                             if (KayitTipi == 0) {
                                 $('#STOK_ADLARI').prop("disabled", false);
+                                $('#BarkodButton').prop("disabled", false);
                             }
                         }
 
