Uretim depo transfer açıklama eklendi.

--- a/NOVA/Views/IK/PersonelBilgiYonetim.cshtml
+++ b/NOVA/Views/IK/PersonelBilgiYonetim.cshtml
@@ -7,10 +7,9 @@
 
 <html>
 <head>
-
-    <link href="https://unpkg.com/bootstrap-table@1.21.2/dist/bootstrap-table.min.css" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
-    <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
+    <link href="~/Scripts/bootstrap-table.min.css" rel="stylesheet" />
+    <link href="~/Scripts/select2.css" rel="stylesheet" />
+    <script src="~/Scripts/select2.min.js"></script>
 
     <style>
         .no-records-found {
@@ -36,7 +35,7 @@
     </style>
 </head>
 <body onclose="close()">
-    <div class="container-xxl" style="margin-top:-3%;z-index:5">
+    <div class="container-xxl" style="margin-top:0.5%;z-index:5">
         <div class="col">
             <div class="btn-group" role="group" aria-label="Basic radio toggle button group">
                 <input type="radio" class="btn-check" onclick="change(1)" name="btnradio" id="btnradio1" checked="" autocomplete="off">
@@ -50,7 +49,7 @@
         <div class="row">
             <div class="col">
                 <select name="state" id="select-state" data-bs-toggle="tooltip" data-bs-offset="0,4" data-bs-placement="top" data-bs-html="true" data-bs-original-title="<i class='bx bxs-info-circle bx-xs' ></i> <span>Seçilen personele göre liste güncellenir</span>" onchange="location.href='@Url.Action("GET", "IK")/'+value" class="js-example-matcher-start form-select dropdown-toggle" style="width:50%">
-                    
+
 
                     @{
 
@@ -76,9 +75,9 @@
 
                 </select>
             </div>
-            <div class="col">
-                <button class="btn btn-info" onclick="raporGoster()">RAPOR</button>
-            </div>
+            @*<div class="col">
+                    <button class="btn btn-info" onclick="raporGoster()">RAPOR</button>
+                </div>*@
         </div>
         <div class="row mt-3">
             <div class="col-md-12">
@@ -3195,12 +3194,12 @@
 
 
                                     @*<div class="row mt-3">
-                        <div class="col">
-                            <button type="button" class="ekle btn btn-info float-end duzenle" onclick="myKaydetFunction()">GÜNCELLE</button>
-                        </div>
+                                            <div class="col">
+                                                <button type="button" class="ekle btn btn-info float-end duzenle" onclick="myKaydetFunction()">GÜNCELLE</button>
+                                            </div>
 
 
-                    </div>*@
+                                        </div>*@
                                 }
                                 else if (ViewBag.Yetki != null && ViewBag.Ekle != null)
                                 {
@@ -6149,12 +6148,12 @@
 
 
                                     @*<div class="row mt-3">
-                        <div class="col">
-                            <button type="button" class="ekle btn btn-info float-end duzenle" onclick="myKaydetFunction()" disabled>GÜNCELLE</button>
-                        </div>
+                                            <div class="col">
+                                                <button type="button" class="ekle btn btn-info float-end duzenle" onclick="myKaydetFunction()" disabled>GÜNCELLE</button>
+                                            </div>
 
 
-                    </div>*@
+                                        </div>*@
                                 }
 
                             }
@@ -6252,15 +6251,13 @@
         </div>
     </div>
 
-
-    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <script src="https://unpkg.com/tableexport.jquery.plugin/tableExport.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/tableexport.jquery.plugin@1.10.21/libs/jsPDF/jspdf.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/tableexport.jquery.plugin@1.10.21/libs/jsPDF-AutoTable/jspdf.plugin.autotable.js"></script>
-    <script src="https://unpkg.com/bootstrap-table@1.21.2/dist/bootstrap-table.min.js"></script>
-    <script src="https://unpkg.com/bootstrap-table@1.21.2/dist/bootstrap-table-locale-all.min.js"></script>
-    <script src="https://unpkg.com/bootstrap-table@1.21.2/dist/extensions/export/bootstrap-table-export.min.js"></script>
-    <script src="https://unpkg.com/bootstrap-table@1.21.2/dist/extensions/filter-control/bootstrap-table-filter-control.min.js"></script>
+    <script src="~/Scripts/sweetAlert.js"></script>
+    <script src="~/Scripts/tableExport.min.js"></script>
+    <script src="~/Scripts/jsPDF.js"></script>
+    <script src="~/Scripts/jsPDF-autotable.js"></script>
+    <script src="~/Scripts/bootstrap-table.min.js"></script>
+    <script src="~/Scripts/tableExport.min.js"></script>
+    <script src="~/Scripts/table-filter.min.js"></script>
 
 
 
@@ -6293,7 +6290,7 @@
             document.getElementById("ik1").className = "nav__link active";
             document.getElementById("personelbilgiyon1").className = "nav__dropdown-item active";
         }
-        
+
         function myKaydetFunction() {
             Swal.fire({
                 title: 'Formu kaydetmek istediğinize emin misiniz?',
@@ -6345,7 +6342,7 @@
 
 
     </script>
-  
+
     <script>
         $(document).ready(function () {
             $('#pageName').html('<div class="dot"></div> Personel Bilgi Yönetimi')
