--- a/NOVA/Views/Sevkiyat/DepoTransfer.cshtml
+++ b/NOVA/Views/Sevkiyat/DepoTransfer.cshtml
@@ -14,7 +14,9 @@
         overflow: hidden;
     }
 </style>
-<script src="https://rawgit.com/schmich/instascan-builds/master/instascan.min.js"></script>
+
+<script src="~/Scripts/instascan.min.js"></script>
+
 <div class="container-fluid">
 
    
