--- a/NOVA/Views/Shared/_Layout_personel.cshtml
+++ b/NOVA/Views/Shared/_Layout_personel.cshtml
@@ -13,16 +13,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=EmulateIE9">
     <link rel="icon" type="image/x-icon" href="/assets/img/icons/brands/Nova_White.png" />
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Public+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap"
-          rel="stylesheet" type="text/css" />
+    <script src="~/Scripts/bootstrap.bundle.min.js"></script>
     <link href="\assets\boxicons-2.1.2\css\boxicons.css" rel="stylesheet" type="text/css" />
     <link href="\assets\boxicons-2.1.2\css\animations.css" rel="stylesheet" type="text/css" />
     <link href="\assets\boxicons-2.1.2\css\transformations.css" rel="stylesheet" type="text/css" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
+    <link href="~/Scripts/bootstrap-icon.css" rel="stylesheet" />
     <!-- Core CSS -->
     <link rel="stylesheet" type="text/css" href="\assets\vendor\css\core.css" class="template-customizer-core-css" />
     <link rel="stylesheet" type="text/css" href="\assets\vendor\css\theme-default.css" class="template-customizer-theme-css" />
