--- a/NOVA/Views/Shared/_Layout_menu.cshtml
+++ b/NOVA/Views/Shared/_Layout_menu.cshtml
@@ -482,7 +482,7 @@
                                         <a href="@Url.Action("FiyatListesi", "Satis")" id="fiyatlistesi1" style="cursor: pointer; display: @ViewBag.DisplayFiyatListesi" class="nav__dropdown-item">• Fiyat Listesi</a>
                                         <a href="@Url.Action("FiyatYonetimi", "Satis")" id="fiyatyonetimi1" style="cursor: pointer; display: @ViewBag.FiyatYonetim" class="nav__dropdown-item">• Fiyat Yönetimi</a>
                                         <a href="@Url.Action("DetayliSiparis", "Satis")" id="detaylisip1" style="cursor: pointer; display: @ViewBag.DisplaySiparis" class="nav__dropdown-item">• Detaylı Sipariş Raporu</a>
-                                        <a href="@Url.Action("HammaddeListesi", "Satis")" id="fabstokfiyatli1" style="cursor: pointer; display: @ViewBag.DisplayFiyatsizStok" class="nav__dropdown-item">• Fabrika Stok</a>
+                                        <a href="@Url.Action("FabrikaStok", "Satis")" id="fabstokfiyatli1" style="cursor: pointer; display: @ViewBag.DisplayFiyatsizStok" class="nav__dropdown-item">• Fabrika Stok</a>
                                         <a href="@Url.Action("ZiyaretPlanlari", "Satis")" id="ziyaretplanlari1" style="cursor: pointer; display: @ViewBag.DisplayZiyaretPlani" class="nav__dropdown-item">• Müşteri İlişkileri Yönetimi</a>
                                         <a href="@Url.Action("Teklif", "Satis")" id="teklif1" style="cursor: pointer; display: @ViewBag.DisplayTeklif" class="nav__dropdown-item">• Teklif Oluştur</a>
                                         <a href="@Url.Action("Tekliflerim", "Satis")" id="tekliflerim1" style="cursor: pointer; display: @ViewBag.DisplayTekliflerim" class="nav__dropdown-item">• Tekliflerim</a>
