ACIK1 Eklendi üretimsonukaydi

--- a/NOVA/Views/Uretim/Index.cshtml
+++ b/NOVA/Views/Uretim/Index.cshtml
@@ -432,7 +432,7 @@
                                    data-show-footer="false"
                                    data-mobile-responsive="false"
                                    data-locale="tr-TR"
-                                   data-sticky-header="true">
+                                   data-sticky-header="false">
                                 <thead>
                                     <tr>
                                         <th data-formatter="oranFormatter4" data-field="ORAN" data-halign="center" data-align="center">GİRDİLER</th>
