--- a/NOVA/Views/Shared/_Layout_common.cshtml
+++ b/NOVA/Views/Shared/_Layout_common.cshtml
@@ -8,10 +8,6 @@
     <title>Nova | Efece Galvaniz</title>
 
     <link rel="icon" type="image/x-icon" href="/assets/img/icons/brands/Nova_White.png" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Public+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap"
-          rel="stylesheet" type="text/css" />
     <link href="\assets\boxicons-2.1.2\css\boxicons.css" rel="stylesheet" type="text/css" />
     <link href="\assets\boxicons-2.1.2\css\animations.css" rel="stylesheet" type="text/css" />
     <link href="\assets\boxicons-2.1.2\css\transformations.css" rel="stylesheet" type="text/css" />
@@ -20,33 +16,38 @@
     <link rel="stylesheet" type="text/css" href="\assets\css\demo.css" />
     <link rel="stylesheet" type="text/css" href="\assets\vendor\libs\perfect-scrollbar\perfect-scrollbar.css" />
     <link rel="stylesheet" type="text/css" href="\assets\vendor\libs/apex-charts/apex-charts.css" />
-    <link href="https://unpkg.com/bootstrap-table@1.21.4/dist/extensions/group-by-v2/bootstrap-table-group-by.css" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/exacti/floating-labels@latest/floating-labels.min.css" media="screen">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
-    <link href="https://unpkg.com/placeholder-loading/dist/css/placeholder-loading.min.css" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />
-    <link href="https://netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
+    <link href="~/Scripts/floating-labels.min.css" rel="stylesheet" />
+    <link href="~/Scripts/bootstrap-icon.css" rel="stylesheet" />
+    <link href="~/Scripts/select2.css" rel="stylesheet" />
+    <link href="~/assets/vendor/css/font-awesome.min.css" rel="stylesheet" />
     <link href="~/assets/vendor/css/Chart.css" rel="stylesheet" />
 
     <link href="~/assets/css/printjs.min.css" rel="stylesheet" />
     <script src="~/assets/js/printjs.min.js"></script>
-
-    <link rel="stylesheet" href="https://unpkg.com/bootstrap-table@1.22.1/dist/bootstrap-table.min.css">
+    <link href="~/Scripts/bootstrap-table.min.css" rel="stylesheet" />
 
     <script src="~/Scripts/jquery-3.6.1.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="~/Scripts/select2.min.js"></script>
+    <script src="~/Scripts/tippy/popper.min.js"></script>
     <link href="~/assets/vendor/css/cssprogress.min.css" rel="stylesheet" />
     <script type="text/javascript" src="\assets\vendor\js\helpers.js"></script>
     <script type="text/javascript" src="\assets\js\config.js"></script>
     <script src="/Scripts/jquery.validate.js" type='text/javascript'></script>
     <script src="/Scripts/jquery.validate.unobtrusive.js" type='text/javascript'></script>
-    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
+    <script src="~/assets/sweetalert/sweetalert.js"></script>
+    <script src="~/Scripts/bootstrap.bundle.min.js"></script>
+    <script src="~/Scripts/fuse.js"></script>
+    <style>
+        .bootstrap-table .table > tbody > tr.group-by.expanded,
+        .bootstrap-table .table > tbody > tr.group-by.collapsed {
+            cursor: pointer;
+        }
 
-    <script src="https://cdn.jsdelivr.net/npm/fuse.js/dist/fuse.js"></script>
-
+        .bootstrap-table .table > tbody > tr.hidden {
+            display: none;
+        }
+        .ph-item{background-color:#fff;border:1px solid #e6e6e6;border-radius:2px;direction:ltr;display:flex;flex-wrap:wrap;margin-bottom:30px;overflow:hidden;padding:30px 15px 15px;position:relative}.ph-item,.ph-item *,.ph-item :after,.ph-item :before{box-sizing:border-box}.ph-item:before{-webkit-animation:ph-animation .8s linear infinite;animation:ph-animation .8s linear infinite;background:linear-gradient(90deg,hsla(0,0%,100%,0) 46%,hsla(0,0%,100%,.35) 50%,hsla(0,0%,100%,0) 54%) 50% 50%;bottom:0;content:" ";left:50%;margin-left:-250%;pointer-events:none;position:absolute;right:0;top:0;width:500%;z-index:1}.ph-item>*{display:flex;flex:1 1 auto;flex-flow:column;margin-bottom:15px;padding-left:15px;padding-right:15px}.ph-row{display:flex;flex-wrap:wrap;margin-top:-7.5px}.ph-row div{background-color:#ced4da;height:10px;margin-top:7.5px}.ph-row .big,.ph-row.big div{height:20px}.ph-row .empty{background-color:hsla(0,0%,100%,0)}.ph-col-2{flex:0 0 16.6666666667%}.ph-col-4{flex:0 0 33.3333333333%}.ph-col-6{flex:0 0 50%}.ph-col-8{flex:0 0 66.6666666667%}.ph-col-10{flex:0 0 83.3333333333%}.ph-col-12{flex:0 0 100%}[class*=ph-col]{direction:ltr}[class*=ph-col]>*+.ph-row{margin-top:0}[class*=ph-col]>*+*{margin-top:7.5px}.ph-avatar{background-color:#ced4da;border-radius:50%;min-width:60px;overflow:hidden;position:relative;width:100%}.ph-avatar:before{content:" ";display:block;padding-top:100%}.ph-picture{background-color:#ced4da;height:120px;width:100%}@@-webkit-keyframes ph-animation{0%{transform:translate3d(-30%,0,0)}to{transform:translate3d(30%,0,0)}}@@keyframes ph-animation{0%{transform:translate3d(-30%,0,0)}to{transform:translate3d(30%,0,0)}}
+    </style>
     <script>
         $(function () {
             $('table').on('post-body.bs.table', function () {
@@ -110,34 +111,32 @@
                 @RenderBody()
 
                 @*<div class="foot" style="position:absolute;bottom:0;right:0;left:0;">
-                    <div class="text-center">
-                        ©
-                        <script>document.write(2022);</script>, designed by
-                        <a href="#" target="_blank"> <img src="/assets/img/icons/brands/Nova.png" height="auto" width="2%" class="mb-1" /> NOVA</a>
-                    </div>
-                </div>*@
+                        <div class="text-center">
+                            ©
+                            <script>document.write(2022);</script>, designed by
+                            <a href="#" target="_blank"> <img src="/assets/img/icons/brands/Nova.png" height="auto" width="2%" class="mb-1" /> NOVA</a>
+                        </div>
+                    </div>*@
 
             </div>
         </div>
     </div>
 
     <div class="layout-overlay layout-menu-toggle"></div>
-    <script src="https://unpkg.com/tableexport.jquery.plugin/tableExport.min.js"></script>
-    <script src="https://unpkg.com/bootstrap-table@1.22.1/dist/bootstrap-table.min.js"></script>
-    <script src="https://unpkg.com/bootstrap-table@1.21.2/dist/bootstrap-table-locale-all.min.js"></script>
-    <script src="https://unpkg.com/bootstrap-table@1.21.2/dist/extensions/export/bootstrap-table-export.min.js"></script>
-    <script src="https://unpkg.com/bootstrap-table@1.21.2/dist/extensions/filter-control/bootstrap-table-filter-control.min.js"></script>
-    <script src="https://unpkg.com/bootstrap-table@1.21.2/dist/extensions/mobile/bootstrap-table-mobile.min.js"></script>
-    <script src="https://unpkg.com/bootstrap-table@1.21.2/dist/extensions/sticky-header/bootstrap-table-sticky-header.js"></script>
-    <script src="https://unpkg.com/bootstrap-table@1.21.2/dist/extensions/fixed-columns/bootstrap-table-fixed-columns.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/tablednd@1.0.5/dist/jquery.tablednd.min.js"></script>
-    <script src="https://unpkg.com/bootstrap-table@1.21.2/dist/extensions/reorder-rows/bootstrap-table-reorder-rows.min.js"></script>
-    <script src="https://unpkg.com/bootstrap-table@1.21.4/dist/extensions/group-by-v2/bootstrap-table-group-by.min.js"></script>
+    <script src="~/Scripts/tableExport.min.js"></script>
+    <script src="~/Scripts/bootstrap-table.min.js"></script>
+    <script src="~/Scripts/tableLocale.js"></script>
+    <script src="~/Scripts/table-filter.min.js"></script>
+    <script src="~/Scripts/bootstrap-table-mobile.min.js"></script>
+    <script src="~/Scripts/table-fixed.js"></script>
+    <script src="~/Scripts/tablednd.min.js"></script>
+    <script src="~/Scripts/table-reorder-rows.min.js"></script>
+    <script src="~/Scripts/table-groupby.min.js"></script>
     <script src="~/jsPDF/jspdf.umd.min.js"></script>
     <script src="~/jsPDF/polyfills.umd.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.15.6/xlsx.core.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.4/moment-with-locales.min.js" integrity="sha512-42PE0rd+wZ2hNXftlM78BSehIGzezNeQuzihiBCvUEB3CVxHvsShF86wBWwQORNxNINlBPuq7rG4WWhNiTVHFg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script src="https://unpkg.com/html5-qrcode"></script>
+    <script src="~/Scripts/xlsx.core.min.js"></script>
+    <script src="~/Scripts/moment-with-locales.min.js"></script>
+    @*<script src="https://unpkg.com/html5-qrcode"></script>*@
 
     <script type="text/javascript" src="/assets/vendor/js/menu.js"></script>
     <script type="text/javascript" src="/assets/js/main.js"></script>
